--- a/index.html
+++ b/index.html
@@ -6,10 +6,322 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h1>Hello Panda! with Anda</h1>
+    <!-- nav part -->
+    <header class="container">
+      <nav class="navbar navbar-expand-lg navbar-light bg-nav">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="images/logo.png" alt="" />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link" href="#shoes">Shoes</a>
+              <a class="nav-link" href="#backpack">Backpack</a>
+              <a
+                class="nav-link"
+                href="#subscribe"
+                tabindex="-1"
+                aria-disabled="true"
+                >Subscribe</a
+              >
+            </div>
+          </div>
+        </div>
+      </nav>
 
+      <!-- carousel part -->
+      <div
+        id="carouselExampleControls"
+        class="carousel slide panda-slide mt-5"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-inner panda-inner">
+          <div class="carousel-item active">
+            <div class="row d-flex align-items-center p-5">
+              <div class="col-md-7">
+                <h1>Mega LCD TV For Sports</h1>
+                <p>
+                  This is the best tv in the world for people who just want to
+                  waste time in front of tv.
+                </p>
+                <h3>$1200</h3>
+                <button class="btn btn-bg-color btn-rounded">Buy Now</button>
+              </div>
+              <div class="col-md-5">
+                <img
+                  src="images/banner-images/tv-removebg-preview.png"
+                  class="d-block w-100"
+                  alt="..."
+                />
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row d-flex align-items-center p-5">
+              <div class="col-md-7">
+                <h1>X-Box for your living room</h1>
+                <p>
+                  This is the best x-box in the world for people who just want
+                  to waste time in front of fake sports.
+                </p>
+                <h3>$420</h3>
+                <button class="btn btn-bg-color btn-rounded">Buy Now</button>
+              </div>
+              <div class="col-md-5">
+                <img
+                  src="images/banner-images/headphone.png"
+                  class="d-block w-100"
+                  alt="..."
+                />
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row d-flex align-items-center p-5">
+              <div class="col-md-7">
+                <h1>Cool Dude Headphone</h1>
+                <p>
+                  This is the best headphone in the world for people who just
+                  want to waste time in front of funky world.
+                </p>
+                <h3>$600</h3>
+                <button class="btn btn-bg-color btn-rounded">Buy Now</button>
+              </div>
+              <div class="col-md-5">
+                <img
+                  src="images/banner-images/xbox.png"
+                  class="d-block w-100"
+                  alt="..."
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleControls"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleControls"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </header>
+
+    <!-- main content part -->
+    <main class="container">
+      <!-- watch, bag and shoe -->
+      <section class="container overflow-hidden mt-5 categories">
+        <div class="row g-5">
+          <div class="col">
+            <div
+              class="p-3 cat-rounded bg-yellow d-flex align-items-center justify-content-around"
+            >
+              <h1 class="text-white">Watch</h1>
+              <img src="images/categories/watch.png" alt="" />
+            </div>
+          </div>
+          <div class="col">
+            <div
+              class="p-3 cat-rounded bg-red d-flex align-items-center justify-content-around"
+            >
+              <h1 class="text-white">Bag</h1>
+              <img src="images/categories/bag.png" alt="" />
+            </div>
+          </div>
+          <div class="col">
+            <div
+              class="p-3 cat-rounded bg-blue d-flex align-items-center justify-content-around"
+            >
+              <h1 class="text-white">Shoes</h1>
+              <img src="images/categories/shoes.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- shoes card part -->
+      <section id="shoes" class="mt-5">
+        <h2>Shoes</h2>
+        <div class="row row-cols-1 row-cols-md-3 g-4 mt-1">
+          <div class="col">
+            <div class="card panda-card h-100 p-2 shadow">
+              <img
+                src="images/shoes/shoe-1.png"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Supply 350</h5>
+                <p class="card-text">
+                  This is a wider card with supporting text below as a natural
+                  lead-in to additional content. This content is a little bit
+                  longer.
+                </p>
+              </div>
+              <div class="card-footer panda-card-footer mb-2">
+                <button class="btn btn-bg-color btn-rounded">Buy Now >></button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card panda-card h-100 p-2 shadow">
+              <img
+                src="images/shoes/shoe-2.png"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Nikey 360</h5>
+                <p class="card-text">
+                  This card has supporting text below as a natural lead-in to
+                  additional content.
+                </p>
+              </div>
+              <div class="card-footer panda-card-footer mb-2">
+                <button class="btn btn-bg-color btn-rounded">Buy Now >></button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card panda-card h-100 p-2 shadow">
+              <img
+                src="images/shoes/shoe-3.png"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Red Airmax</h5>
+                <p class="card-text">
+                  This is a wider card with supporting text below as a natural
+                  lead-in to additional content. This card has even longer
+                  content than the first to show that equal height action.
+                </p>
+              </div>
+              <div class="card-footer panda-card-footer mb-2">
+                <button class="btn btn-bg-color btn-rounded">Buy Now >></button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- backpack part -->
+      <section id="backpack" class="mt-5">
+        <h2>Backpack</h2>
+        <div class="row row-cols-1 row-cols-md-3 g-4 mt-1">
+          <div class="col">
+            <div class="card panda-card h-100 p-2 shadow">
+              <img src="images/bags/bag-1.png" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Red Laltu Bag</h5>
+                <h5>$120</h5>
+                <p class="card-text">
+                  This is a wider card with supporting text below as a natural
+                  lead-in to additional content. This content is a little bit
+                  longer.
+                </p>
+              </div>
+              <div class="card-footer panda-card-footer mb-2">
+                <button class="btn btn-bg-color btn-rounded">Buy Now >></button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card panda-card h-100 p-2 shadow">
+              <img src="images/bags/bag-2.png" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Blue Niltu Bag</h5>
+                <h5>$350</h5>
+                <p class="card-text">
+                  This card has supporting text below as a natural lead-in to
+                  additional content.
+                </p>
+              </div>
+              <div class="card-footer panda-card-footer mb-2">
+                <button class="btn btn-bg-color btn-rounded">Buy Now >></button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card panda-card h-100 p-2 shadow">
+              <img src="images/bags/bag-3.png" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Black Kaltu Bag</h5>
+                <h5>$169</h5>
+                <p class="card-text">
+                  This is a wider card with supporting text below as a natural
+                  lead-in to additional content. This card has even longer
+                  content than the first to show that equal height action.
+                </p>
+              </div>
+              <div class="card-footer panda-card-footer mb-2">
+                <button class="btn btn-bg-color btn-rounded">Buy Now >></button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- subscribe part -->
+      <section
+        id="subscribe"
+        style="height: 300px"
+        class="bg-light-blue rounded-corner mt-5 d-flex justify-content-center align-items-center"
+      >
+        <div>
+          <h1 style="text-align: center">LET'S STAY IN TOUCH</h1>
+          <h5 style="text-align: center">
+            Get updates on sales, specials and more
+          </h5>
+          <div class="d-flex align-items-center justify-content-evenly">
+            <input
+              style="width: 250px"
+              type="email"
+              class="form-control btn-rounded ms-3"
+              id="exampleInputEmail1"
+              placeholder="Enter your email address"
+            />
+            <button class="btn btn-bg-color btn-rounded me-3">SUBMIT</button>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <!-- footer part -->
+    <footer class="text-center mt-5">
+      <small>@2025. Panda Commerece. All rights reserved.</small>
+    </footer>
     <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
