changed the bag names

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             <div class="card panda-card h-100 p-2 shadow">
               <img src="images/bags/bag-1.png" class="card-img-top" alt="..." />
               <div class="card-body">
-                <h5 class="card-title">Red Laltu Bag</h5>
+                <h5 class="card-title">Red Travel Bag</h5>
                 <h5>$120</h5>
                 <p class="card-text">
                   This is a wider card with supporting text below as a natural
@@ -261,7 +261,7 @@
             <div class="card panda-card h-100 p-2 shadow">
               <img src="images/bags/bag-2.png" class="card-img-top" alt="..." />
               <div class="card-body">
-                <h5 class="card-title">Blue Niltu Bag</h5>
+                <h5 class="card-title">Blue Travel Bag</h5>
                 <h5>$350</h5>
                 <p class="card-text">
                   This card has supporting text below as a natural lead-in to
@@ -277,7 +277,7 @@
             <div class="card panda-card h-100 p-2 shadow">
               <img src="images/bags/bag-3.png" class="card-img-top" alt="..." />
               <div class="card-body">
-                <h5 class="card-title">Black Kaltu Bag</h5>
+                <h5 class="card-title">Black Travel Bag</h5>
                 <h5>$169</h5>
                 <p class="card-text">
                   This is a wider card with supporting text below as a natural
